2006-11-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Fix previous patch to handle the
	SYSTEM attribute as well.

2006-11-27  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/signal.h: Add __extension__ to various anonymous
	unions and structs.  (thanks to V.Haisman)

2006-11-14  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h: Bump DLL minor version number to 23.

2006-11-06  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (build_fh_pc): Add missing DEV_SD1_MAJOR case (Thanks to
	Joe Loh for noticing).

2006-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (struct user_heap_info): Add slop member.
	* heap.cc (heap_init): Add slop factor to heap allocation.  Add
	comment.
	* mmap.cc (MapViewNT): Allocate memory maps top down.
	(fhandler_dev_zero::mmap): Ditto.
	* shared.cc (shared_info::heap_slop_size): New method.
	(shared_info::heap_chunk_size): Don't use debug_printf at early stage.
	* shared_info.h (SHARED_INFO_CB): Accomodate change to shared_info.
	(CURR_SHARED_MAGIC): Ditto.
	(class shared_info): Add heap_slop member.  Declare heap_slop_size.
	* wincap.h: Define heapslop throughout.
	* wincap.cc: Ditto.

2006-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (__api_fatal): Drop spare argument to __small_sprintf.
	* smallprint.c (__small_vsprintf): Preserve GetLastError value.
	* winsup.h (api_fatal): Simplify.  Drop duplicate filename arg.

2006-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::rewinddir): Fix comment.

2006-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::rewinddir): Accomodate
	buggy RestartScan behaviour of Windows 2000.
	* wincap.h: Define has_buggy_restart_scan throughout.
	* wincap.cc: Ditto.

2006-10-17  Corinna Vinschen  <corinna@vinschen.de>

	* glob.c: Remove.
	* glob.cc: New file.  Latest glob version from FreeBSD plus Cygwin