@@ -69,6 +69,7 @@ struct wincaps
   unsigned has_fileid_dirinfo				: 1;
   unsigned has_exclusiveaddruse				: 1;
   unsigned has_buggy_restart_scan			: 1;
+  unsigned needs_count_in_si_lpres2			: 1;
 };
 
 class wincapc
@@ -144,6 +145,7 @@ public:
   bool	IMPLEMENT (has_fileid_dirinfo)
   bool	IMPLEMENT (has_exclusiveaddruse)
   bool	IMPLEMENT (has_buggy_restart_scan)
+  bool	IMPLEMENT (needs_count_in_si_lpres2)
 
 #undef IMPLEMENT
 };
